# little_pipelines

./: .coverage  .gitignore  README.md  pyproject.toml
src/little_pipelines/: ___logger.py  __console.py  __init__.py  __states.py  _cache.py  _config.py  _exceptions.py  _execution.py  _hashing.py  _logger.py  _pipeline.py  _shell.py  _tasks.py  expire.py  expiry.py  util.py
tests/: conftest.py  gtask.py  old__test_tasks.py  test_expire.py  test_hashing.py  test_pipeline.py  test_shell.py  test_tasks.py  test_util.py
