[project]
name = "little-pipelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Garin Wally", email = "gwally@mountainline.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
