[project]
name = "little-pipelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Garin Wally", email = "gwally@mountainline.com" }
]
requires-python = ">=3.13"
dependencies = [
    "diskcache>=5.6.3",
    "loguru>=0.7.3",
    "rich>=14.2.0",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.11.0",
    "ipython>=9.6.0",
    "pytest>=8.4.2",
]
